[package]
name = "svoyak_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "~0.34"
telegram-bot = { git = "https://github.com/EgorKulikov/telegram-bot" }
log = "~0.4"
futures = "~0.3"
env_logger = "~0.9"
html-escape = "~0.2"
tokio = { version = "~1.37", features = ["full"] }
async-recursion = "~0.3"
reqwest = "~0.11"
tokio-stream = "~0.1"
borsh = "~0.9"
serde = "~1.0"
serde_json = "~1.0"
